accessibility improvement, fix btn visibility on desktop, fix nav height, add animations scripts

--- a/css/modules/btn.css
+++ b/css/modules/btn.css
@@ -26,7 +26,7 @@
     width: 165px;
     height: 165px;
     position: absolute;
-    bottom: -50px;
+    bottom: -20px;
   }
   & * {
     position: relative;
