--- a/css/modules/navs.css
+++ b/css/modules/navs.css
@@ -25,6 +25,10 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+
+    @mixin atLarge {
+      min-height: unset;
+    }
   }
 
   @mixin atLarge {
